--- a/src/assets/css/common/common-color.less
+++ b/src/assets/css/common/common-color.less
@@ -91,9 +91,18 @@
   color:#aaa
 }
 
+.bgcolor-gray{
+  background-color:#aaa;
+}
+
 .color-lightgray{
   color:#ccc
 }
+
+.bgcolor-lightgray{
+  background-color:#ccc
+}
+
 
 .label-color{
   color: rgba(0, 0, 0, 0.85)
