--- a/src/assets/css/theme-color.less
+++ b/src/assets/css/theme-color.less
@@ -15,5 +15,5 @@
 @color-yellow:#ff8716;
 @color-light-yellow:#faad14;
 @color-deep-yellow:#f77c0d;
-@theme-color:@color-blue;
+@theme-color:@color-yellow;
 @color-red:#f00;
