多规格商品完成

--- a/src/assets/css/antd/antd.less
+++ b/src/assets/css/antd/antd.less
@@ -19,6 +19,12 @@ body {
     padding: 10px 8px;
   }
 
+  .small-table .ant-table-thead>tr>th,
+  .small-table .ant-table-tbody>tr>td{
+    padding: 4px;
+  }
+
+
   .ant-modal-body .ant-form-item.ant-form-item-with-help,
   .common-form .ant-form-item.ant-form-item-with-help {
     margin-bottom: 0;
