优化富文本组件

--- a/src/assets/css/common/common-color.less
+++ b/src/assets/css/common/common-color.less
@@ -1,5 +1,5 @@
-
 @import '../theme-color.less';
+
 .light {
   color: white;
 }
@@ -40,6 +40,7 @@
 .color666 {
   color: #666;
 }
+
 .bgcolor666 {
   background-color: #666;
 }
@@ -55,12 +56,17 @@
 .colorCCC {
   color: #ccc;
 }
+
 .color333 {
   color: #333;
 }
 
 .bgcolorCCC {
   background-color: #ccc;
+}
+
+.bgcolorE8E8E8 {
+  background-color: #e8e8e8;
 }
 
 .colorFFF {
@@ -70,41 +76,45 @@
 .bgcolorFFF {
   background-color: #fff;
 }
+
 .bgcolorF2F2F2 {
   background-color: #f2f2f2;
 }
+
 .bgcolorF4F4F4 {
   background-color: #f4f4f4;
 }
-.bgcolor-green{
+
+.bgcolor-green {
   background-color: #1AAD19;
 }
-.color-green{
+
+.color-green {
   color: #1AAD19;
 }
 
-.color-red{
+.color-red {
   color: #FF6968;
 }
 
-.color-gray{
-  color:#aaa
+.color-gray {
+  color: #aaa
 }
 
-.bgcolor-gray{
-  background-color:#aaa;
+.bgcolor-gray {
+  background-color: #aaa;
 }
 
-.color-lightgray{
-  color:#ccc
+.color-lightgray {
+  color: #ccc
 }
 
-.bgcolor-lightgray{
-  background-color:#ccc
+.bgcolor-lightgray {
+  background-color: #ccc
 }
 
 
-.label-color{
+.label-color {
   color: rgba(0, 0, 0, 0.85)
 }
 
@@ -118,11 +128,10 @@
   color: #f2021d;
 }
 
-.color-light-yellow{
-  color:@color-light-yellow
+.color-light-yellow {
+  color: @color-light-yellow
 }
 
-.color-yellow{
-  color:@color-yellow
+.color-yellow {
+  color: @color-yellow
 }
-
