--- a/src/assets/css/common/components.less
+++ b/src/assets/css/common/components.less
@@ -95,3 +95,21 @@ input.border {
 .delete-span{
   color: @color-red;
 }
+
+/* 美化滚动条样式 */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+  background-color: transparent;
+}
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: transparent;
+  background-color: transparent;
+}
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb {
+  border-radius: 7px;
+  -webkit-box-shadow: inset 0 0 6px rgba(255, 135,22, 0.3);
+  background-color: #ff8716;
+}
